simple login and logout page

--- a/angular-mfe-example/projects/host/src/app/app.component.html
+++ b/angular-mfe-example/projects/host/src/app/app.component.html
@@ -1,13 +1,8 @@
-<div #header></div>
-
-
-
+<!-- <div #header></div>
 <h1>Angular MFE Host</h1>
-
-
 <a routerLink='/'>Main</a> &#160;
-<a routerLink='/mfe1'>Link to MFE</a>
+<a routerLink='/mfe1'>Link to MFE</a> -->
 <router-outlet></router-outlet>
-<div #container></div>
+<!-- <div #container></div> -->
 
-<div style="margin:10px" #footer></div>
+<!-- <div style="margin:10px" #footer></div> -->
