--- a/angular-mfe-example/styles/test.css
+++ b/angular-mfe-example/styles/test.css
@@ -4,6 +4,6 @@ a {
 }
 
 mat-card {
-    background-color: black !important;
-    color: white !important;
+    /* background-color: black !important;
+    color: white !important; */
 }
