Crud operation changes

--- a/angular-mfe-example/projects/host/src/app/base/base.component.html
+++ b/angular-mfe-example/projects/host/src/app/base/base.component.html
@@ -2,6 +2,8 @@
   header
   <button mat-raised-button (click)="logout()">logout</button>
 </mat-toolbar>
+
+<a routerLink="/base/user">user</a>
 <router-outlet></router-outlet>
 <mat-toolbar color="primary">
   footer
