--- a/angular-mfe-example/projects/mfe2/src/app/user/user.component.html
+++ b/angular-mfe-example/projects/mfe2/src/app/user/user.component.html
@@ -6,7 +6,7 @@
     </button>
   </div><br/>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table matSort [dataSource]="dataSource">
       <!-- Edit Icon Column -->
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
@@ -25,13 +25,13 @@
 
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id # </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Id # </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
